--- a/home.html
+++ b/home.html
@@ -21,6 +21,95 @@ body{
   margin:0; font-family:Inter,sans-serif; color:var(--text);
   background:radial-gradient(1200px 600px at 10% -10%, #0b1220 0%, #020617 60%);
 }
+
+/* HERO MARKETING */
+.hero{
+  display:grid;
+  grid-template-columns:1.1fr .9fr;
+  gap:32px;
+  align-items:center;
+  padding:60px 24px 40px;
+  max-width:1400px;
+  margin:auto;
+}
+.hero h1{
+  font-size:46px;
+  line-height:1.05;
+  margin:0 0 14px;
+  letter-spacing:-.02em;
+}
+.hero p{
+  color:var(--muted);
+  font-size:16px;
+  max-width:560px;
+}
+.hero .cta{
+  margin-top:18px;
+  display:flex;
+  gap:12px;
+  flex-wrap:wrap;
+}
+.btn{
+  padding:14px 20px;
+  border-radius:999px;
+  border:1px solid var(--grid);
+  background:#020617;
+  color:#fff;
+  font-weight:900;
+  letter-spacing:.06em;
+  box-shadow:var(--shadow);
+}
+.btn.primary{
+  background:linear-gradient(135deg,#22c55e,#16a34a);
+  color:#022c22;
+  border:none;
+}
+.pricing{
+  margin-top:10px;
+  display:flex;
+  gap:14px;
+  flex-wrap:wrap;
+}
+.price{
+  background:#020617;
+  border:1px solid var(--grid);
+  border-radius:16px;
+  padding:12px 16px;
+  box-shadow:var(--shadow);
+  font-weight:900;
+}
+.price strong{color:var(--gold)}
+
+/* MOCKUP */
+.mockup{
+  position:relative;
+  background:linear-gradient(180deg,#0b1220,#020617);
+  border:1px solid var(--grid);
+  border-radius:24px;
+  box-shadow:0 40px 120px rgba(0,0,0,.65);
+  padding:18px;
+}
+.mockup .screen{
+  background:#020617;
+  border-radius:16px;
+  border:1px solid var(--grid);
+  padding:12px;
+  min-height:280px;
+}
+.mockup .mini{
+  position:absolute;
+  right:-24px;
+  bottom:-18px;
+  width:160px;
+  background:#020617;
+  border-radius:18px;
+  border:1px solid var(--grid);
+  box-shadow:0 20px 60px rgba(0,0,0,.6);
+  padding:8px;
+}
+.mini .thumb{height:180px;border-radius:12px;background:linear-gradient(180deg,#111,#000)}
+
+/* DASHBOARD */
 .header{padding:18px 24px;border-bottom:1px solid var(--grid);background:#020617cc;position:sticky;top:0;z-index:10}
 .container{padding:22px 24px 40px;max-width:1400px;margin:auto}
 .filters{display:flex;gap:10px;margin-bottom:16px}
@@ -31,7 +120,10 @@ body{
 .card b{display:block;margin-top:6px;font-size:32px;font-weight:900;color:var(--accent)}
 .card.warn b{color:var(--gold)} .card.danger b{color:var(--danger)}
 .section{display:grid;grid-template-columns:repeat(2,1fr);gap:18px}
-@media(max-width:900px){.section{grid-template-columns:1fr}}
+@media(max-width:900px){
+  .hero{grid-template-columns:1fr}
+  .section{grid-template-columns:1fr}
+}
 .panel{background:#020617;border:1px solid var(--grid);border-radius:var(--radius);padding:16px;box-shadow:var(--shadow)}
 .panel h3{margin:0 0 10px;font-size:14px;font-weight:900;color:#cbd5f5}
 .badge{display:inline-block;padding:6px 12px;border-radius:999px;font-size:12px;font-weight:800;border:1px solid var(--grid);background:#0b1220;margin:4px}
@@ -39,6 +131,39 @@ body{
 </head>
 <body>
 
+<!-- HERO PREMIUM (MARKETING) -->
+<section class="hero">
+  <div>
+    <h1>Sistema de Ficha Técnica & CMV</h1>
+    <p>Controle o custo real de cada prato, ajuste sua precificação e aumente sua margem com dashboard em tempo real e cardápio digital instalável.</p>
+
+    <div class="pricing">
+      <div class="price">Implantação: <strong>R$ 200,00</strong></div>
+      <div class="price">Mensalidade: <strong>R$ 149/mês</strong></div>
+    </div>
+
+    <div class="cta">
+      <button class="btn primary">Quero aumentar meu lucro</button>
+      <button class="btn">Ver demonstração</button>
+    </div>
+  </div>
+
+  <div class="mockup">
+    <div class="screen">
+      <strong>Dashboard • CMV</strong>
+      <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-top:10px">
+        <div class="card"><small>CMV Médio</small><b>28.4%</b></div>
+        <div class="card warn"><small>Produto Top</small><b>LASANHA</b></div>
+        <div class="card"><small>Lucro Total</small><b>R$ 12.430</b></div>
+      </div>
+    </div>
+    <div class="mini">
+      <div class="thumb"></div>
+    </div>
+  </div>
+</section>
+
+<!-- DASHBOARD REAL -->
 <div class="header">
   <small id="atualizadoEm"></small>
 </div>
