--- a/dashboard.html
+++ b/dashboard.html
@@ -63,18 +63,83 @@ html,body{
 .price strong{color:var(--gold)}
 
 .mockup{
-  position:relative; background:linear-gradient(180deg,#0b1220,#020617);
-  border:1px solid var(--grid); border-radius:26px; padding:18px;
-  box-shadow:var(--shadow);
+  position:relative;
+  background:
+    radial-gradient(120% 80% at 10% -10%, rgba(34,197,94,.15), transparent 40%),
+    linear-gradient(180deg,#0b1220,#020617);
+  border:1px solid rgba(148,163,184,.15);
+  border-radius:28px;
+  padding:20px;
+  box-shadow:
+    0 40px 120px rgba(0,0,0,.7),
+    inset 0 1px 0 rgba(255,255,255,.04);
+  backdrop-filter: blur(8px);
 }
+
 .mockup .screen{
-  border:1px solid var(--grid); border-radius:18px; padding:14px;
-  background:#020617; min-height:240px;
-  display:grid; grid-template-columns:repeat(3,1fr); gap:10px;
+  position:relative;
+  border:1px solid rgba(148,163,184,.12);
+  border-radius:22px;
+  padding:18px;
+  background:
+    linear-gradient(180deg, rgba(2,6,23,.85), rgba(2,6,23,.95));
+  min-height:240px;
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:14px;
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,.02);
 }
-.kpi{background:#020617;border:1px solid var(--grid);border-radius:14px;padding:12px}
-.kpi small{color:var(--muted);font-weight:800;font-size:11px}
-.kpi b{display:block;margin-top:6px;font-size:20px;font-weight:900;color:var(--accent)}
+
+.kpi{
+  position:relative;
+  overflow:hidden;
+  background:
+    radial-gradient(120% 80% at 0% 0%, rgba(34,197,94,.12), transparent 45%),
+    linear-gradient(180deg, #020617, #020617);
+  border:1px solid rgba(148,163,184,.12);
+  border-radius:18px;
+  padding:18px 16px;
+  box-shadow:
+    0 20px 50px rgba(0,0,0,.6),
+    inset 0 1px 0 rgba(255,255,255,.04);
+  transition:.25s ease;
+}
+
+.kpi::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:
+    linear-gradient(120deg, transparent 30%, rgba(255,255,255,.08), transparent 60%);
+  opacity:.4;
+  pointer-events:none;
+}
+
+.kpi:hover{
+  transform: translateY(-4px) scale(1.02);
+  box-shadow:
+    0 30px 80px rgba(0,0,0,.75),
+    0 0 0 1px rgba(34,197,94,.35),
+    0 0 40px rgba(34,197,94,.35);
+}
+
+.kpi small{
+  color:#9ca3af;
+  font-weight:800;
+  font-size:11px;
+  letter-spacing:.12em;
+  text-transform:uppercase;
+}
+
+.kpi b{
+  display:block;
+  margin-top:10px;
+  font-size:26px;
+  font-weight:900;
+  letter-spacing:-.02em;
+  color:#22c55e;
+  text-shadow: 0 0 18px rgba(34,197,94,.45);
+}
 .mockup .mini{
   position:absolute; right:-22px; bottom:-16px; width:150px;
   background:#020617; border-radius:18px; border:1px solid var(--grid);
@@ -150,16 +215,27 @@ iframe{flex:1;width:100%;border:0;background:#fff}
         <div class="pill">Mensalidade: <strong>R$ 149/mês</strong></div>
       </div>
       <div class="hero-cta">
-        <a class="btn primary" href="https://wa.me/5599999999999" target="_blank">Solicitar informações</a>
+        <a class="btn primary" href="https://wa.me/5577998253249" target="_blank">Solicitar informações</a>
         <button class="btn" onclick="openLogin()">Entrar no sistema</button>
       </div>
     </div>
 
     <div class="mockup">
       <div class="screen">
-        <div class="kpi"><small>CMV Médio</small><b>28.4%</b></div>
-        <div class="kpi"><small>Produto Top</small><b>LASANHA</b></div>
-        <div class="kpi"><small>Lucro</small><b>R$ 12.430</b></div>
+<div class="kpi">
+  <small>CMV Médio</small>
+  <b>28.4%</b>
+</div>
+
+<div class="kpi">
+  <small>Produto Top</small>
+  <b>LASANHA</b>
+</div>
+
+<div class="kpi">
+  <small>Lucro</small>
+  <b>R$ 12.430</b>
+</div>
       </div>
       <div class="mini"><div class="thumb"></div></div>
     </div>
