--- a/dashboard.html
+++ b/dashboard.html
@@ -24,26 +24,30 @@ html,body{
   margin:0; width:100%; height:100%;
   font-family:Inter,system-ui,Arial,sans-serif;
   color:var(--text);
-  background:
-    radial-gradient(1200px 600px at 10% -10%, #0b1220 0%, #020617 60%);
   overflow:hidden;
 }
 
-/* HERO LOGIN */
-.login-hero{
+/* HERO IMAGEM FULLSCREEN */
+.login-hero.hero-image{
   position:fixed; inset:0;
-  display:grid; place-items:center;
+  background:url("img/mockup-app.png") center center / cover no-repeat;
 }
-.hero-wrap{
-  max-width:1200px; width:100%;
-  padding:40px 22px;
-  display:grid; grid-template-columns:1.1fr .9fr; gap:28px; align-items:center;
+.hero-overlay{
+  width:100%; height:100%;
+  background:
+    linear-gradient(180deg, rgba(2,6,23,.65), rgba(2,6,23,.9)),
+    radial-gradient(800px 400px at 20% 0%, rgba(34,197,94,.25), transparent 50%);
+  padding:32px 36px;
 }
-.hero-copy h1{
-  font-size:44px; line-height:1.05; letter-spacing:-.02em; margin:0 0 10px;
+.hero-top{
+  max-width:1400px; margin:0 auto;
+  display:flex; align-items:center; justify-content:space-between; gap:20px;
 }
-.hero-copy p{color:var(--muted); max-width:560px}
-.hero-cta{margin-top:18px; display:flex; gap:12px; flex-wrap:wrap}
+.hero-title h1{
+  margin:0; font-size:44px; font-weight:900; letter-spacing:-.02em;
+}
+.hero-title p{margin:6px 0 0; color:var(--muted); font-weight:600}
+.hero-actions{display:flex; gap:12px; flex-wrap:wrap}
 .btn{
   border-radius:999px; padding:14px 20px; font-weight:900; letter-spacing:.06em;
   border:1px solid var(--grid); background:#0b1220; color:#fff; cursor:pointer;
@@ -52,121 +56,6 @@ html,body{
   border:none; color:#022c22;
   background:linear-gradient(135deg,#22c55e,#16a34a);
   box-shadow:0 16px 44px rgba(34,197,94,.45);
-}
-.price{
-  margin-top:12px; display:flex; gap:12px; flex-wrap:wrap
-}
-.price .pill{
-  background:#020617; border:1px solid var(--grid);
-  border-radius:16px; padding:10px 14px; font-weight:900;
-}
-.price strong{color:var(--gold)}
-
-.mockup{
-  position:relative;
-  background:
-    radial-gradient(120% 80% at 10% -10%, rgba(34,197,94,.15), transparent 40%),
-    linear-gradient(180deg,#0b1220,#020617);
-  border:1px solid rgba(148,163,184,.15);
-  border-radius:28px;
-  padding:20px;
-  box-shadow:
-    0 40px 120px rgba(0,0,0,.7),
-    inset 0 1px 0 rgba(255,255,255,.04);
-  backdrop-filter: blur(8px);
-}
-
-.mockup .screen{
-  position:relative;
-  border:1px solid rgba(148,163,184,.12);
-  border-radius:22px;
-  padding:18px;
-  background:
-    linear-gradient(180deg, rgba(2,6,23,.85), rgba(2,6,23,.95));
-  min-height:240px;
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:14px;
-  box-shadow: inset 0 0 0 1px rgba(255,255,255,.02);
-}
-
-.kpi{
-  position:relative;
-  overflow:hidden;
-  background:
-    radial-gradient(120% 80% at 0% 0%, rgba(34,197,94,.12), transparent 45%),
-    linear-gradient(180deg, #020617, #020617);
-  border:1px solid rgba(148,163,184,.12);
-  border-radius:18px;
-  padding:18px 16px;
-  box-shadow:
-    0 20px 50px rgba(0,0,0,.6),
-    inset 0 1px 0 rgba(255,255,255,.04);
-  transition:.25s ease;
-}
-
-.kpi::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:
-    linear-gradient(120deg, transparent 30%, rgba(255,255,255,.08), transparent 60%);
-  opacity:.4;
-  pointer-events:none;
-}
-
-.kpi:hover{
-  transform: translateY(-4px) scale(1.02);
-  box-shadow:
-    0 30px 80px rgba(0,0,0,.75),
-    0 0 0 1px rgba(34,197,94,.35),
-    0 0 40px rgba(34,197,94,.35);
-}
-
-.kpi small{
-  color:#9ca3af;
-  font-weight:800;
-  font-size:11px;
-  letter-spacing:.12em;
-  text-transform:uppercase;
-}
-
-.kpi b{
-  display:block;
-  margin-top:10px;
-  font-size:26px;
-  font-weight:900;
-  letter-spacing:-.02em;
-  color:#22c55e;
-  text-shadow: 0 0 18px rgba(34,197,94,.45);
-}
-.mockup .mini{
-  position:absolute;
-  right:-36px;
-  bottom:-26px;
-  width:180px;
-  background:linear-gradient(180deg,#0b1220,#020617);
-  border-radius:26px;
-  border:1px solid rgba(148,163,184,.25);
-  box-shadow:
-    0 40px 120px rgba(0,0,0,.8),
-    0 0 0 1px rgba(34,197,94,.25);
-  padding:10px;
-}
-.mini .thumb{
-  width:100%;
-  height:180px;
-  object-fit:cover;
-  border-radius:12px;
-  display:block;
-  box-shadow:
-    0 20px 60px rgba(0,0,0,.7),
-    inset 0 0 0 1px rgba(255,255,255,.06);
-  background:#000;
-}
-@media(max-width:900px){
-  .hero-wrap{grid-template-columns:1fr}
-  .hero-copy h1{font-size:34px}
 }
 
 /* MODAL LOGIN */
@@ -189,9 +78,7 @@ html,body{
   background:#0b1220; color:#fff; outline:none;
 }
 .actions{margin-top:16px; display:flex; gap:10px}
-.close{
-  position:absolute; right:14px; top:12px; cursor:pointer; font-weight:900; opacity:.8
-}
+.close{position:absolute; right:14px; top:12px; cursor:pointer; font-weight:900; opacity:.8}
 
 /* APP */
 .app{display:grid; grid-template-columns:88px 1fr; height:100vh; display:none}
@@ -211,52 +98,32 @@ html,body{
 .glyph.settings::after{content:"";position:absolute;inset:6px;border:2px solid #00a6a0;border-radius:50%}
 .glyph.box::before{content:"";position:absolute;inset:0;border:3px solid #00a6a0;border-radius:4px}
 .glyph.box::after{content:"";position:absolute;inset:6px;border-top:3px solid #00a6a0}
-
 .main{display:flex;flex-direction:column;height:100%}
 .header{height:68px;background:#dff6f5;display:flex;align-items:center;justify-content:space-between;padding:0 30px;font-weight:800}
 .logout{background:#ef4444;border:none;padding:8px 14px;border-radius:12px;color:#fff;font-weight:700;cursor:pointer}
 iframe{flex:1;width:100%;border:0;background:#fff}
+
+@media(max-width:900px){
+  .hero-top{flex-direction:column; align-items:flex-start}
+  .hero-title h1{font-size:32px}
+}
 </style>
 </head>
 
 <body>
 
-<!-- HERO (ANTES DO LOGIN) -->
-<section id="loginHero" class="login-hero">
-  <div class="hero-wrap">
-    <div class="hero-copy">
-      <h1>Sistema de Ficha Técnica & CMV</h1>
-      <p>Controle o custo real de cada prato, ajuste preços e aumente sua margem com dashboards e cardápio digital.</p>
-      <div class="price">
-        <div class="pill">Implantação: <strong>R$ 200,00</strong></div>
-        <div class="pill">Mensalidade: <strong>R$ 149/mês</strong></div>
+<!-- HERO FULLSCREEN -->
+<section id="loginHero" class="login-hero hero-image">
+  <div class="hero-overlay">
+    <div class="hero-top">
+      <div class="hero-title">
+        <h1>CB SYSTEMS®</h1>
+        <p>Sistema de Ficha Técnica & CMV</p>
       </div>
-      <div class="hero-cta">
-        <a class="btn primary" href="https://wa.me/5577998253249" target="_blank">Solicitar informações</a>
-        <button class="btn" onclick="openLogin()">Entrar no sistema</button>
+      <div class="hero-actions">
+        <a class="btn primary" href="https://wa.me/5577998253249" target="_blank">Solicitar orçamento</a>
+        <button class="btn" onclick="openLogin()">Entrar</button>
       </div>
-    </div>
-
-    <div class="mockup">
-      <div class="screen">
-<div class="kpi">
-  <small>CMV Médio</small>
-  <b>28.4%</b>
-</div>
-
-<div class="kpi">
-  <small>Produto Top</small>
-  <b>LASANHA</b>
-</div>
-
-<div class="kpi">
-  <small>Lucro</small>
-  <b>R$ 12.430</b>
-</div>
-      </div>
-<div class="mini">
-  <img class="thumb" src="img/mockup-app.png" alt="Preview do sistema">
-</div>
     </div>
   </div>
 </section>
@@ -285,11 +152,11 @@ iframe{flex:1;width:100%;border:0;background:#fff}
 <!-- APP -->
 <div id="app" class="app">
   <aside class="sidebar">
-    <div class="icon active" onclick="openPage('home.html',this)" title="Home"><span class="glyph home"></span></div>
-    <div class="icon" onclick="openPage('fichatecnica.html',this)" title="Fichas"><span class="glyph doc"></span></div>
-    <div class="icon" onclick="openPage('ingredientes.html',this)" title="Ingredientes"><span class="glyph box"></span></div>
-    <div class="icon" onclick="openPage('analiseficha.html',this)" title="Análises"><span class="glyph chart"></span></div>
-    <div class="icon" onclick="openPage('config.html',this)" title="Configurações"><span class="glyph settings"></span></div>
+    <div class="icon active" onclick="openPage('home.html',this)"><span class="glyph home"></span></div>
+    <div class="icon" onclick="openPage('fichatecnica.html',this)"><span class="glyph doc"></span></div>
+    <div class="icon" onclick="openPage('ingredientes.html',this)"><span class="glyph box"></span></div>
+    <div class="icon" onclick="openPage('analiseficha.html',this)"><span class="glyph chart"></span></div>
+    <div class="icon" onclick="openPage('config.html',this)"><span class="glyph settings"></span></div>
   </aside>
 
   <div class="main">
