--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@ html,body{
 /* HERO IMAGEM FULLSCREEN */
 .login-hero.hero-image{
   position:fixed; inset:0;
-  background:url("img/mockup-app.png") center center / cover no-repeat;
+  background:url("imgmockup-app.png") center center / cover no-repeat;
 }
 .hero-overlay{
   width:100%; height:100%;
