--- a/dashboard.html
+++ b/dashboard.html
@@ -35,22 +35,32 @@ html,body{
 .hero-overlay{
   width:100%; height:100%;
   background:
-    linear-gradient(180deg, rgba(2,6,23,.65), rgba(2,6,23,.9)),
-    radial-gradient(800px 400px at 20% 0%, rgba(34,197,94,.25), transparent 50%);
-  padding:32px 36px;
+    linear-gradient(180deg, rgba(2,6,23,.25), rgba(2,6,23,.45)),
+    radial-gradient(800px 400px at 20% 0%, rgba(34,197,94,.15), transparent 60%);
+  padding:14px 24px;
 }
 .hero-top{
   max-width:1400px; margin:0 auto;
   display:flex; align-items:center; justify-content:space-between; gap:20px;
 }
 .hero-title h1{
-  margin:0; font-size:44px; font-weight:900; letter-spacing:-.02em;
+  margin:0;
+  font-size:30px;
+  font-weight:800;
+  letter-spacing:-.01em;
 }
-.hero-title p{margin:6px 0 0; color:var(--muted); font-weight:600}
-.hero-actions{display:flex; gap:12px; flex-wrap:wrap}
+.hero-title p{
+  margin:4px 0 0;
+  color:#cbd5e1;
+  font-size:13px;
+  font-weight:600;
+}.hero-actions{display:flex; gap:12px; flex-wrap:wrap}
 .btn{
-  border-radius:999px; padding:14px 20px; font-weight:900; letter-spacing:.06em;
-  border:1px solid var(--grid); background:#0b1220; color:#fff; cursor:pointer;
+  border-radius:999px;
+  padding:9px 14px;
+  font-weight:800;
+  font-size:12px;
+  letter-spacing:.04em;
 }
 .btn.primary{
   border:none; color:#022c22;
