--- a/dashboard.html
+++ b/dashboard.html
@@ -45,9 +45,13 @@ html,body{
 }
 .hero-title h1{
   margin:0;
-  font-size:30px;
-  font-weight:800;
+  font-size:28px;
+  font-weight:900;
   letter-spacing:-.01em;
+  color:#ffffff;                 /* força branco puro */
+  text-shadow:
+    0 2px 12px rgba(0,0,0,.55),  /* sombra escura p/ contraste */
+    0 0 22px rgba(34,197,94,.25); /* glow verde suave premium */
 }
 .hero-title p{
   margin:4px 0 0;
@@ -109,8 +113,20 @@ html,body{
 .glyph.box::before{content:"";position:absolute;inset:0;border:3px solid #00a6a0;border-radius:4px}
 .glyph.box::after{content:"";position:absolute;inset:6px;border-top:3px solid #00a6a0}
 .main{display:flex;flex-direction:column;height:100%}
-.header{height:68px;background:#dff6f5;display:flex;align-items:center;justify-content:space-between;padding:0 30px;font-weight:800}
-.logout{background:#ef4444;border:none;padding:8px 14px;border-radius:12px;color:#fff;font-weight:700;cursor:pointer}
+.header{
+  height:68px;
+  background:#e6f7f7;   /* fundo claro */
+  color:#020617;        /* texto escuro */
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:0 24px;
+  font-weight:800;
+}
+
+#pageTitle{
+  color:#020617;        /* força o título ficar visível */
+}.logout{background:#ef4444;border:none;padding:8px 14px;border-radius:12px;color:#fff;font-weight:700;cursor:pointer}
 iframe{flex:1;width:100%;border:0;background:#fff}
 
 @media(max-width:900px){
