--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,6 @@ html,body{
 .login-hero.hero-image{
   position:fixed; inset:0;
   background: radial-gradient(1200px 600px at 10% -10%, #0b1220 0%, #020617 60%);
-  padding:12px;
 }
 .hero-overlay{
   width:100%; height:100%;
@@ -39,7 +38,23 @@ html,body{
     radial-gradient(800px 400px at 20% 0%, rgba(34,197,94,.15), transparent 60%);
   padding:14px 24px;
 }
+.hero-frame{
+  max-width: min(96vw, 1400px);
+  height: calc(100vh - 96px); /* abaixo do título/botões */
+  margin: 14px auto 0;
+  border-radius: 28px;          /* você já ajustou isso 👍 */
+  overflow: hidden;            /* respeita as bordas */
+  box-shadow:
+    0 30px 90px rgba(0,0,0,.65),
+    inset 0 0 0 1px rgba(255,255,255,.06);
+  background: #020617;
+  position: relative;
+}
 
+.hero-image-bg{
+  position:absolute; inset:0;
+  background: url("imgmockup-app.png") center center / contain no-repeat; /* <- caber inteiro */
+}
 .hero-frame{
   max-width: 96vw;
   height: calc(100vh - 110px);
@@ -180,7 +195,7 @@ iframe{flex:1;width:100%;border:0;background:#fff}
       </div>
     </div>
 
-    <!-- FRAME DA IMAGEM (quase tela toda, com bordas suaves) -->
+    <!-- IMAGEM EM FRAME (não corta e não ultrapassa a tela) -->
     <div class="hero-frame">
       <div class="hero-image-bg"></div>
     </div>
