--- a/dashboard.html
+++ b/dashboard.html
@@ -231,6 +231,8 @@ iframe{flex:1;width:100%;border:0;background:#fff}
     <div class="icon" onclick="openPage('ingredientes.html',this)"><span class="glyph box"></span></div>
     <div class="icon" onclick="openPage('analiseficha.html',this)"><span class="glyph chart"></span></div>
     <div class="icon" onclick="openPage('config.html',this)"><span class="glyph settings"></span></div>
+    <div class="icon" onclick="openPage('midias.html',this)"><span class="glyph settings"></span></div>
+
   </aside>
 
   <div class="main">
@@ -289,6 +291,8 @@ function openPage(page, el){
     "ingredientes.html": "CB SYSTEMS® - Ingredientes",
     "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
     "config.html": "CB SYSTEMS® - Configurações"
+    "midias.html": "CB SYSTEMS® - Mídias do Cardápio"
+
   };
   document.getElementById("pageTitle").innerText = titles[page] || "CB SYSTEMS®";
 }
