--- a/midias.html
+++ b/midias.html
@@ -17,20 +17,40 @@ body{margin:0;background:linear-gradient(180deg,#000,#0b0b0c);color:#fff;font-fa
 .header{position:sticky;top:0;z-index:10;padding:16px;background:rgba(0,0,0,.7);backdrop-filter:blur(10px);border-bottom:1px solid var(--border)}
 .header h1{margin:0;font-size:18px;font-weight:900;letter-spacing:.5px}
 .wrap{max-width:1100px;margin:0 auto;padding:16px}
-.uploader{display:grid;grid-template-columns:1fr auto auto;gap:10px;margin-bottom:14px}
-.uploader input,.uploader select{height:46px;border-radius:12px;border:1px solid var(--border);background:#0f0f12;color:#fff;padding:0 12px}
-.uploader button{height:46px;border-radius:12px;border:1px solid var(--gold);background:#000;color:var(--gold);font-weight:900;cursor:pointer}
-.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:12px}
+
+.uploader{
+  display:grid;
+  grid-template-columns:1fr 90px 160px 110px 110px auto;
+  gap:8px;
+  margin-bottom:14px;
+}
+.uploader input,.uploader select{
+  height:46px;border-radius:12px;border:1px solid var(--border);
+  background:#0f0f12;color:#fff;padding:0 12px
+}
+.uploader select[multiple]{height:46px}
+.uploader button{
+  height:46px;border-radius:12px;border:1px solid var(--gold);
+  background:#000;color:var(--gold);font-weight:900;cursor:pointer
+}
+
+.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(180px,1fr));gap:12px}
 .card{background:#0f0f12;border:1px solid var(--border);border-radius:18px;overflow:hidden}
 .thumb{width:100%;aspect-ratio:1/1;object-fit:cover;background:#000}
 .card video.thumb{object-fit:cover}
+
 .meta{display:flex;justify-content:space-between;align-items:center;padding:10px}
 .badge{font-size:10px;font-weight:900;border:1px solid var(--border);padding:4px 8px;border-radius:999px}
 .badge.on{border-color:var(--gold);color:var(--gold)}
+
 .actions{display:flex;gap:6px}
-.actions button{background:transparent;border:1px solid var(--border);color:#fff;border-radius:10px;padding:6px 10px;cursor:pointer}
+.actions button{
+  background:transparent;border:1px solid var(--border);color:#fff;
+  border-radius:10px;padding:6px 10px;cursor:pointer
+}
 .actions button.danger{border-color:#dc2626;color:#dc2626}
 .actions button:hover{border-color:var(--gold);color:var(--gold)}
+
 .footer-note{opacity:.6;font-size:12px;margin-top:10px}
 </style>
 </head>
@@ -47,19 +67,41 @@ body{margin:0;background:linear-gradient(180deg,#000,#0b0b0c);color:#fff;font-fa
       <option value="IMG">IMG</option>
       <option value="VIDEO">VIDEO</option>
     </select>
+
+    <select id="dias" multiple>
+      <option value="1">Seg</option>
+      <option value="2">Ter</option>
+      <option value="3">Qua</option>
+      <option value="4">Qui</option>
+      <option value="5">Sex</option>
+      <option value="6">Sáb</option>
+      <option value="7">Dom</option>
+    </select>
+
+    <input id="hora_inicio" type="time" value="00:00" />
+    <input id="hora_fim" type="time" value="23:59" />
+
     <button onclick="addPromo()">Adicionar</button>
   </div>
 
   <div id="grid" class="grid"></div>
-  <div class="footer-note">* Upload do arquivo é feito no Storage do Supabase. Aqui você só organiza as URLs.</div>
+  <div class="footer-note">
+    * Faça upload no Storage do Supabase. Aqui você organiza URLs, dias e horários.
+  </div>
 </div>
 
 <script>
-const sb = supabase.createClient("https://dxkszikemntfusfyrzos.supabase.co","sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed");
+const sb = supabase.createClient(
+  "https://dxkszikemntfusfyrzos.supabase.co",
+  "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
+);
 
 const grid = document.getElementById("grid");
 const urlInput = document.getElementById("url");
 const tipoInput = document.getElementById("tipo");
+const diasInput = document.getElementById("dias");
+const horaInicioInput = document.getElementById("hora_inicio");
+const horaFimInput = document.getElementById("hora_fim");
 
 async function load(){
   const { data, error } = await sb
@@ -69,14 +111,16 @@ async function load(){
 
   if(error){ console.error(error); return; }
 
-  grid.innerHTML = data.map(p => `
+  grid.innerHTML = (data||[]).map(p => `
     <div class="card">
       ${p.tipo === "VIDEO"
         ? `<video class="thumb" src="${p.url}" muted autoplay loop playsinline></video>`
         : `<img class="thumb" src="${p.url}">`
       }
       <div class="meta">
-        <span class="badge ${p.ativo?'on':''}">${p.tipo} • ${p.ativo?'ATIVO':'OFF'}</span>
+        <span class="badge ${p.ativo?'on':''}">
+          ${p.tipo} • ${p.ativo?'ATIVO':'OFF'}
+        </span>
         <div class="actions">
           <button onclick="toggle('${p.id}', ${p.ativo})">${p.ativo?'Desativar':'Ativar'}</button>
           <button class="danger" onclick="del('${p.id}')">Excluir</button>
@@ -89,12 +133,21 @@ async function load(){
 async function addPromo(){
   const url = urlInput.value.trim();
   const tipo = tipoInput.value;
-  if(!url) return alert("Informe a URL do arquivo");
+  const dias = Array.from(diasInput.selectedOptions).map(o => Number(o.value));
+  const hora_inicio = horaInicioInput.value || "00:00";
+  const hora_fim = horaFimInput.value || "23:59";
 
-  const { error } = await sb.from("promocoes").insert({ url, tipo, ativo:true });
+  if(!url) return alert("Informe a URL");
+  if(!dias.length) return alert("Selecione ao menos um dia");
+
+  const { error } = await sb.from("promocoes").insert({
+    url, tipo, ativo:true, dias_semana:dias, hora_inicio, hora_fim
+  });
+
   if(error){ alert("Erro ao salvar"); console.error(error); return; }
 
   urlInput.value = "";
+  diasInput.selectedIndex = -1;
   load();
 }
 
